--- a/templates/predict.html
+++ b/templates/predict.html
@@ -2,23 +2,136 @@
 <html>
 <head>
     <title>Predict the route</title>
+    
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.14.1/themes/base/jquery-ui.css"/>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js"></script>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css"/>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+
+
     <script type="text/javascript" src="{{ url_for('static', filename='constant.js') }}"></script>
 
     <script type="text/javascript" src="{{ url_for('static', filename='functions.js') }}"></script>
+    <style>
+        table {
+          width: 100%; /* Or a specific width */
+          border-collapse: collapse; /* Collapse table borders */
+        }
+      
+        th, td {
+          border: 1px solid black; /* Add borders to cells */
+          padding: 8px; /* Add padding to cells */
+          text-align: left; /* Align text to the left */
+        }
+
+        tr.bg_blue {background-color: aquamarine;}
+
+        #scrollable-container {
+            width: 300px; /* Adjust as needed */
+            height: 200px; /* Adjust as needed */
+            overflow-y: scroll; /* Enable vertical scrolling */
+            border: 1px solid #ccc; /* Optional border */
+            padding: 10px;
+        }
+
+        ul { /* Style for the list (optional) */
+            list-style-type: none; /* Remove bullet points */
+            padding: 0;
+            margin: 0;
+        }
+
+        li { /* Style for individual list items (optional) */
+            padding: 5px 0; /* Add some vertical padding */
+            border-bottom: 1px solid #eee; /* Add a separator line */
+        }
+      </style>
 </head>
 <body>
     <h1>Predict the route</h1>
 
-    {% if error %}
-    <p style="color: red;">{{ error }}</p>
-    {% endif %}
-
     <div>
-        <label for="page_name">Datetime:</label>
-        <input type="text" name="txt_datetime" id="txt_datetime"/>
-        <button type="submit" onclick="begin_prediction();">Predict</button>
+        <table width="50%">
+            <tbody>
+              <tr>
+                <td>Date</td>
+                <td><input type="text" id="datepicker" name="date"/></td>
+              </tr>
+              <tr>
+                <td>Time</td>
+                <td><input type="text" id="timepicker" name="time"/></td>
+              </tr>
+              <tr>
+                <td>Turbine list</td>
+                <td>
+                    <div id="scrollable-container">
+                        <ul>
+                          <li><input type="checkbox" value="0" name="cbo_turbines"/> 1</li>
+                          <li><input type="checkbox" value="1" name="cbo_turbines" checked/> Item 2</li>
+                          <li>Item 3</li>
+                          <li>Item 4</li>
+                          <li>Item 5</li>
+                          <li>Item 6</li>
+                          <li>Item 7</li>
+                          <li>Item 8</li>
+                          <li>Item 9</li>
+                          <li>Item 10</li>
+                          <li>Item 11</li>
+                          <li>Item 12</li>
+                          <li>Item 13</li>
+                          <li>Item 14</li>
+                          <li>Item 15</li>
+                          <li>Item 16</li>
+                          <li>Item 17</li>
+                          <li>Item 18</li>
+                          <li>Item 19</li>
+                          <li>Item 20</li>
+                          </ul>
+                      </div>
+                </td>
+              </tr>
+              <tr>
+                <td>Wave Height</td>
+                <td><input type="text" id="from_wave_h" name="from_wave_h" value="1.304"/></td>
+              </tr>
+              <tr>
+                <td>Row 5, Column 1</td>
+                <td><input type="text" id="from_e_wind" name="from_e_wind" value="0.95"/></td>
+              </tr>
+              <tr>
+                <td>Row 6, Column 1</td>
+                <td><input type="text" id="from_n_wind" name="from_n_wind" value="8.94"/></td>
+              </tr>
+              <tr>
+                <td>Row 7, Column 1</td>
+                <td><input type="text" id="from_e_current" name="from_e_current" value="-0.065"/></td>
+              </tr>
+              <tr>
+                <td>Row 8, Column 1</td>
+                <td><input type="text" id="from_n_current" name="from_n_current" value="-0.305"/></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td><input type="button" value="Predict" onclick="begin_prediction();"></td>
+              </tr>
+              <tr class="bg_blue">
+                <td>Turbines route</td>
+                <td></td>
+              </tr>
+              <tr class="bg_blue">
+                <td>Estimated total fuel</td>
+                <td><span>1258.15</span></td>
+              </tr>
+              <tr class="bg_blue">
+                <td>Estimated total time</td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+        
     </div>
 
 </body>
