- correct the form labels

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -79,19 +79,19 @@
                 <td><input type="text" id="from_wave_h" name="from_wave_h" value="1.304"/></td>
               </tr>
               <tr>
-                <td>Row 5, Column 1</td>
+                <td>E Wind</td>
                 <td><input type="text" id="from_e_wind" name="from_e_wind" value="0.95"/></td>
               </tr>
               <tr>
-                <td>Row 6, Column 1</td>
+                <td>N Wind</td>
                 <td><input type="text" id="from_n_wind" name="from_n_wind" value="8.94"/></td>
               </tr>
               <tr>
-                <td>Row 7, Column 1</td>
+                <td>E Current</td>
                 <td><input type="text" id="from_e_current" name="from_e_current" value="-0.065"/></td>
               </tr>
               <tr>
-                <td>Row 8, Column 1</td>
+                <td>N Current</td>
                 <td><input type="text" id="from_n_current" name="from_n_current" value="-0.305"/></td>
               </tr>
               <tr>
